# adbi

./: CHANGELOG.md  Cargo.toml  README.md
src/: adb.rs  adbi.rs  addon.rs  log.rs  main.rs
src/adb/: core.rs  tcpip.rs
src/adbi/: common.rs  make_wireless.rs
src/addon/: output.rs  vecu8.rs
