# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "adbi"
version = "0.0.0"
authors = ["wesauis"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/wesauis/adbi"
homepage = "https://github.com/wesauis/adbi"
edition = "2021"

[dependencies]
color-eyre = "0.5"
colored = "2"
regex = "1.5"

[profile.dev.package.backtrace]
opt-level = 3
